media/sonarr/sonarr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    kubernetes.io/metadata.name: sonarr
    media-ns: authorized
