media/sonarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        media-app: authorized
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: sonarr
        image: linuxserver/sonarr:4.0.19
        ports:
          - name: http
            containerPort: 8989
        volumeMounts:
          - name: sonarr-config
            mountPath: /config
          - name: sonarr-downloads
            mountPath: /downloads
          - name: sonarr-tvshows
            mountPath: /tvshows
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: sonarr-downloads
          persistentVolumeClaim:
            claimName: sonarr-download-pvc
        - name: sonarr-tvshows
          persistentVolumeClaim:
            claimName: sonarr-tvshows-pvc
