media/sonarr/sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
